# minicrawler

./: .dockerignore  .gitignore  .gitlab-ci.yml  Makefile  Makefile.am  Makefile.hagrid.mac  Makefile.mac  README.md  TODO  cert.c  compose.yml  configure.ac  conv.c  converthtml2text.c  crawler.c  docker-bake.hcl  docker-compose.yml  entities.c  inflate.c  libminicrawler-url.pc.in  libminicrawler-urlparser.pc.in  libminicrawler.pc.in  license.txt  main.c  time.c
.docker/: Dockerfile
.docker/minicrawler/: Dockerfile
.github/actions/prepare/: action.yml
.github/workflows/: main.yml
etc/minicrawler/: Dockerfile
h/: global.h  proto.h  struct.h  version.h
integration-tests/: Makefile.am  run  test_cases.php
o/: PLACEHOLDER
src/: api.c  auth.c  base64.c  buf.c  cert.c  cli.c  conv.c  converthtml2text.c  cookies.c  crawler.c  debug.c  digcalc.c  entities.c  http1.c  http2.c  inflate.c  main.c  malloc.c  memory.c  serialize.c  time.c
src/h/: cli.h  digcalc.h  http2.h  minicrawler.h  proto.h  string.h  struct.h  version.h
src/tpl/: tpl.c
src/url/: alloc.c  alloc.h  api.c  minicrawler-url.h  minicrawler-urlparser.h  parse.c  parse.cc  serialize.c  url.hh
test/: run  url.c  urlparser.c  urltestdata.json
test/json/: json.c  json.h
